working pipex, working on norm

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,7 @@
                 {
                     "description": "Enable pretty-printing for gdb",
                     "text": "-enable-pretty-printing",
+					"autoAttachChildProcesses": true,
                     "ignoreFailures": true
                 }
             ],
